// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`module "adapter/mock" #default() resolves with a request/response tuple 1`] = `
Array [
  Request {
    "defaultParams": Object {},
    "encrypted": false,
    "headers": Map {
      "accept" => "application/vnd.api+json",
    },
    "logger": Logger {
      "enabled": false,
      "filter": Object {
        "params": Array [],
      },
      "format": "text",
      "level": "WARN",
    },
    "method": "GET",
    "params": Object {},
    "url": Object {
      "auth": null,
      "hash": null,
      "host": null,
      "hostname": null,
      "href": "/posts",
      "params": Array [],
      "path": "/posts",
      "pathname": "/posts",
      "port": null,
      "protocol": null,
      "query": null,
      "search": null,
      "slashes": null,
    },
  },
  Response {
    "end": [Function],
    "getHeader": [Function],
    "headers": Map {},
    "logger": Logger {
      "enabled": false,
      "filter": Object {
        "params": Array [],
      },
      "format": "text",
      "level": "WARN",
    },
    "removeHeader": [Function],
    "send": [Function],
    "setHeader": [Function],
    "stats": Array [],
    "status": [Function],
    "statusCode": 200,
    "statusMessage": "OK",
  },
]
`;

exports[`module "adapter/mock" #request #create() - with \`body\` builds a request from an options object 1`] = `
Request {
  "defaultParams": Object {},
  "encrypted": false,
  "headers": Map {
    "accept" => "application/vnd.api+json",
    "content-type" => "application/vnd.api+json",
  },
  "logger": Logger {
    "enabled": false,
    "filter": Object {
      "params": Array [],
    },
    "format": "text",
    "level": "ERROR",
  },
  "method": "POST",
  "params": Object {
    "data": Object {
      "attributes": Object {
        "body": "",
        "is-public": false,
        "title": "New Post",
      },
      "type": "posts",
    },
  },
  "url": Object {
    "auth": null,
    "hash": null,
    "host": null,
    "hostname": null,
    "href": "/posts",
    "params": Array [],
    "path": "/posts",
    "pathname": "/posts",
    "port": null,
    "protocol": null,
    "query": null,
    "search": null,
    "slashes": null,
  },
}
`;

exports[`module "adapter/mock" #request #create() - without \`body\` builds a request from an options object 1`] = `
Request {
  "defaultParams": Object {},
  "encrypted": false,
  "headers": Map {
    "accept" => "application/vnd.api+json",
  },
  "logger": Logger {
    "enabled": false,
    "filter": Object {
      "params": Array [],
    },
    "format": "text",
    "level": "ERROR",
  },
  "method": "GET",
  "params": Object {},
  "url": Object {
    "auth": null,
    "hash": null,
    "host": null,
    "hostname": null,
    "href": "/posts",
    "params": Array [],
    "path": "/posts",
    "pathname": "/posts",
    "port": null,
    "protocol": null,
    "query": null,
    "search": null,
    "slashes": null,
  },
}
`;

exports[`module "adapter/mock" #response #create() - with a resolver function => Response #end() calls the resolver function 1`] = `
Array [
  Array [
    Object {
      "body": "Test",
      "headers": Map {},
      "statusCode": 200,
      "statusText": "OK",
    },
  ],
]
`;

exports[`module "adapter/mock" #response #create() - with a resolver function => Response #send() calls the resolver function 1`] = `
Array [
  Array [
    Object {
      "body": "Test",
      "headers": Map {},
      "statusCode": 200,
      "statusText": "OK",
    },
  ],
]
`;

exports[`module "adapter/mock" #response #create() - with a resolver function builds a response from an options object 1`] = `
Response {
  "end": [Function],
  "getHeader": [Function],
  "headers": Map {},
  "logger": Logger {
    "enabled": false,
    "filter": Object {
      "params": Array [],
    },
    "format": "text",
    "level": "ERROR",
  },
  "removeHeader": [Function],
  "send": [Function],
  "setHeader": [Function],
  "stats": Array [],
  "status": [Function],
  "statusCode": 200,
  "statusMessage": "OK",
}
`;

exports[`module "adapter/mock" #response #create() - without a resolver function => Response #removeHeader() proxies headers#delete() 1`] = `
Map {
  "content-type" => "application/vnd.api+json",
}
`;

exports[`module "adapter/mock" #response #create() - without a resolver function => Response #status() returns \`this\` 1`] = `
Response {
  "end": [Function],
  "getHeader": [Function],
  "headers": Map {},
  "logger": Logger {
    "enabled": false,
    "filter": Object {
      "params": Array [],
    },
    "format": "text",
    "level": "ERROR",
  },
  "removeHeader": [Function],
  "send": [Function],
  "setHeader": [Function],
  "stats": Array [],
  "status": [Function],
  "statusCode": 201,
  "statusMessage": "OK",
}
`;

exports[`module "adapter/mock" #response #create() - without a resolver function builds a response from an options object 1`] = `
Response {
  "end": [Function],
  "getHeader": [Function],
  "headers": Map {},
  "logger": Logger {
    "enabled": false,
    "filter": Object {
      "params": Array [],
    },
    "format": "text",
    "level": "ERROR",
  },
  "removeHeader": [Function],
  "send": [Function],
  "setHeader": [Function],
  "stats": Array [],
  "status": [Function],
  "statusCode": 200,
  "statusMessage": "OK",
}
`;
